# google-form

./: .clang-format  CMakeLists.txt  README.md  main.cpp
src/controllers/: professor.hpp  student.hpp  user.hpp
src/models/: DescriptiveQuestion.cpp  MultipleChoiceQuestion.cpp  descriptiveQuestion.cpp  descriptiveQuestion.h  exam.cpp  exam.h  multipleChoiceQuestion.cpp  multipleChoiceQuestion.h  objection.cpp  objection.h  professor.cpp  professor.h  question.cpp  question.h  student.cpp  student.h  studentGroup.cpp  studentGroup.h  studentRanking.cpp  studentRanking.h  user.cpp  user.h
src/views/: CreateMultipleChoiceQuestion.hpp  createExam.hpp  createQuestion.hpp  display.hpp  login.hpp  professorDashboard.hpp
